# monday-retry

./: .gitignore  README.md  setup.cfg
.qlty/: qlty.toml
src/monday_retry/: mixpanel_middleware.py  monday.py  retry.py
